<resources>
    <string name="app_name">Scryp</string>
    <string name="title_activity_qr">QrActivity</string>
    <string name="title_activity_confirm_transaction">ConfirmTransactionActivity</string>
    <string name="no_data">No data :(</string>
    <string name="item_label">Item</string>
    <string name="total_price_label">Total Price</string>
    <string name="scryp_deal_label">Scryp Deal</string>
    <string name="pay">Pay</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_transaction_complete">TransactionCompleteActivity</string>
    <string name="statusText">Done!</string>
    <string name="amountText">$c2.00</string>
    <string name="debitedText">has been debited from your wallet</string>
    <string name="paymentStatus">Payment status</string>
    <string name="homeText">Home</string>
    <string name="confirmPaymentText">Confirm payment</string>
    <string name="title_activity_main">Scryp</string>
    <string name="scrypPreAlphaText">Scryp Pre-Alpha</string>
    <string name="dealScanCanceled">Deal scan canceled</string>
    <string name="scrypSymbol">$c</string>
    <string name="action_replenish">Replenish</string>
    <string name="scryp_amount_text">$c%1$.2s</string>
    <string name="new_wallet_text">Enter a passphrase for your new wallet, and we\'ll generate a wallet for you.</string>
    <string name="scan_an_offer">Scan an Offer</string>
</resources>
