<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/content_confirm_transaction"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                tools:context="io.scryp.scryp.ConfirmTransactionActivity"
                tools:showIn="@layout/activity_confirm_transaction"
    >

    <TextView
        android:id="@+id/recipient_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="64dp"
        android:text="@string/no_data"
        android:textAppearance="@style/scrypLargeText"
        android:textStyle="italic"
        />

    <TextView
        android:id="@+id/item_ui_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/recipient_name"
        android:layout_below="@+id/recipient_name"
        android:layout_marginTop="48dp"
        android:text="@string/item_label"
        android:textAppearance="@style/scrypLabelText"
        />

    <TextView
        android:id="@+id/item_description"
        style="@style/scrypLargeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/item_ui_label"
        android:layout_below="@+id/item_ui_label"
        android:text="@string/no_data"
        />

    <TextView
        android:id="@+id/total_price_ui_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/recipient_name"
        android:layout_below="@+id/item_ui_label"
        android:layout_marginTop="96dp"
        android:text="@string/total_price_label"
        />

    <TextView
        android:id="@+id/total_price"
        style="@style/scrypLargeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/recipient_name"
        android:layout_below="@+id/total_price_ui_label"
        android:text="@string/no_data"
        />

    <TextView
        android:id="@+id/scryp_deal_ui_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/recipient_name"
        android:layout_below="@+id/total_price_ui_label"
        android:layout_marginTop="96dp"
        android:text="@string/scryp_deal_label"
        />

    <TextView
        android:id="@+id/scryp_deal_description"
        style="@style/scrypLargeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/recipient_name"
        android:layout_below="@+id/scryp_deal_ui_label"
        android:text="@string/no_data"
        />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="96dp"
        android:layout_height="64dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/scryp_deal_description"
        android:layout_marginBottom="14dp"
        android:background="#BDDEDE"
        android:text="@string/cancel"
        android:textAllCaps="true"
        android:textAppearance="@style/scrypLabelText"
        />


    <Button
        android:id="@+id/payButton"
        android:layout_width="96dp"
        android:layout_height="64dp"
        android:layout_alignTop="@+id/cancelButton"
        android:layout_marginStart="18dp"
        android:layout_toEndOf="@+id/cancelButton"
        android:background="#BDDEDE"
        android:text="@string/pay"
        android:textAllCaps="true"
        android:textAppearance="@style/scrypLabelText"
        />


</RelativeLayout>
