<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_transaction_complete"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="io.scryp.scryp.TransactionCompleteActivity"
    tools:showIn="@layout/activity_transaction_complete">

    <ImageButton
        android:id="@+id/imageButton"
        style="@style/Widget.AppCompat.ImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#fafafa"
        app:srcCompat="@drawable/ic_favorite_black_200dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="32dp" />

    <TextView
        android:id="@+id/completeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/statusText"
        android:textAppearance="@style/scrypHeadlineText"
        app:layout_constraintTop_toBottomOf="@+id/imageButton"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/amountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amountText"
        android:textAppearance="@style/scrypLargeText"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/completeText"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.501" />

    <TextView
        android:id="@+id/debitedLabel"
        android:layout_width="167dp"
        android:layout_height="59dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/debitedText"
        android:textAppearance="@style/scrypLabelTextSmall"
        app:layout_constraintTop_toBottomOf="@+id/amountText"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent">

    </TextView>



    <Button
        android:id="@+id/homeButton"
        android:layout_width="175dp"
        android:layout_height="63dp"
        android:background="#BDDEDE"
        android:textAppearance="@style/scrypLabelText"
        android:textAllCaps="true"
        android:text="@string/homeText"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="32dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.502" />

</android.support.constraint.ConstraintLayout>
